--- a/.github/workflows/algorithmic-enterprise.yml
+++ b/.github/workflows/algorithmic-enterprise.yml
@@ -22,6 +22,10 @@ jobs:
 
       - name: 🧱 Run Unit Tests (Math & Logic)
         run: npm run test:unit
+        env:
+          DATABASE_URL: "postgresql://mock:5432/test"
+          JWT_SECRET: "mock-secret-key-for-testing"
+          NODE_ENV: "test"
 
       # Spin up a temp Postgres for Integration tests
       - name: Start Integration DB
