--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,7 +9,8 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "lint": "eslint src --ext .ts,.tsx",
-        "test": "vitest"
+        "test": "vitest",
+        "test:unit": "echo 'No frontend unit tests yet' && exit 0"
     },
     "dependencies": {
         "@tanstack/react-query": "^5.17.9",
