fix(ci): Create integration test infrastructure and patch schema for alpine

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,6 +10,7 @@
         "start": "node dist/index.js",
         "test": "vitest",
         "test:unit": "vitest run",
+        "test:integration": "vitest run --config vitest.integration.config.ts",
         "seed:peacetime": "ts-node scripts/seed-peacetime.ts",
         "lint": "eslint src --ext .ts",
         "lint:deps": "dependency-cruiser --config .dependency-cruiser.cjs src",
