--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,6 +8,7 @@
         "dev": "nodemon src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js",
+        "postinstall": "prisma generate",
         "test": "vitest",
         "test:unit": "vitest run",
         "test:integration": "vitest run --config vitest.integration.config.ts",
